fixed issue with images on tablet

--- a/contact.css
+++ b/contact.css
@@ -218,6 +218,7 @@ footer {
 
     .link-section .links img {
       width: 10%;
+      height: 10%
     }
 
     .open-to-card {
@@ -242,6 +243,7 @@ footer {
 
     .link-section .links img {
       width: 7%;
+      height: 7%;
     }
 
     .open-to-card {
